data/derived/comb/progs/unify/prog4967.ml.out
Characters 23-29:
  let helperAppend l n = (0::l)*n
                         ^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
